--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,24 @@
     <script defer src="js/index.js"></script>
 </head>
 <body>
-    <h1>Hola mundo</h1>
+    <div class="container">
+        <div class="campoLucha">
+            <div class="cazadores">
+                <div class="cazador"><img src="assets/cazadores/cazador1.svg" alt="cazador"></div>
+                <div class="cazador"><img src="assets/cazadores/cazador2.svg" alt="cazador"></div>
+                <div class="cazador"><img src="assets/cazadores/cazador3.svg" alt="cazador"></div>
+                <div class="cazador"><img src="assets/cazadores/cazador4.svg" alt="cazador"></div>
+                <div class="cazador"><img src="assets/cazadores/cazador5.svg" alt="cazador"></div>
+            </div>
+            <div class="pokemons">
+                <div class="pokemon"><img src="assets/pokemons/pokemon1.svg" alt="pokemon"></div>
+                <div class="pokemon"><img src="assets/pokemons/pokemon2.svg" alt="pokemon"></div>
+                <div class="pokemon"><img src="assets/pokemons/pokemon3.svg" alt="pokemon"></div>
+                <div class="pokemon"><img src="assets/pokemons/pokemon4.svg" alt="pokemon"></div>
+                <div class="pokemon"><img src="assets/pokemons/pokemon5.svg" alt="pokemon"></div>
+            </div>
+        </div>
+    </div>
     
 </body>
 </html>
