Implementada nueva parte de atacar, solo falta que se vea y hacer un bucle

--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
     <div class="container">
+        <div class="logotipo"><img src="assets/fondo/logotipo.png" alt="Logotipo"></div>
         <div class="campoLucha">
             <div class="pokemons">
                 
@@ -19,6 +20,7 @@
             </div>
 
             <button id="botonPintar"type="submit"><img src="assets/fondo/pokeball.svg">Jugar</button>
+            <button id="botonAtacar" type="submit"><img src="assets/fondo/ataque.png"></button>
 
         </div>
     </div>
